# popsift

./: CMakeLists.txt
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/popsift/: popsift.cpp  popsift.h  s_desc_norm_l2.h  s_filtergrid.cu  s_image.cu  s_orientation.cu  sift_desc.cu  sift_pyramid.cu
